<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:defaultValue="original"
        app:entries="@array/youtube_playback_page_style_entries"
        app:entryValues="@array/youtube_playback_page_style_values"
        app:key="youtube_playback_page_style"
        app:title="@string/youtube_playback_page_style_title"
        app:dialogTitle="@string/youtube_playback_page_style_dialog_title"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        app:key="youtube_pip"
        app:title="@string/youtube_pip_title"
        app:summary="@string/youtube_pip_summary" />

    <SwitchPreferenceCompat
        app:key="youtube_retain_history_video_pages"
        app:title="@string/youtube_retain_history_video_pages"
        app:summary="@string/youtube_retain_history_video_pages_summary"
        app:defaultValue="true" />

    <ListPreference
        app:defaultValue="auto"
        app:entries="@array/youtube_video_quality_entries"
        app:entryValues="@array/youtube_video_quality_values"
        app:key="youtube_video_quality"
        app:title="@string/youtube_video_quality_title"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>