<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MenuTitle">
    <item
        android:id="@+id/move"
        android:text="@string/move"
        android:icon="@drawable/ic_file_move_menu" />
    <item
        android:id="@+id/delete"
        android:text="@string/delete"
        android:icon="@drawable/ic_delete_24dp_menu" />
    <item
        android:id="@+id/rename"
        android:text="@string/rename"
        android:icon="@drawable/ic_edit_24dp_menu" />
    <item
        android:id="@+id/share"
        android:text="@string/share"
        android:icon="@drawable/ic_share_24dp_menu" />
    <item
        android:id="@+id/details"
        android:text="@string/details"
        android:icon="@drawable/ic_info_24dp_menu" />
</menu>