<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/dialogPreferredContentPaddingHorizontal"
            android:paddingRight="@dimen/dialogPreferredContentPaddingHorizontal"
            android:drawableTop="@drawable/ic_launcher"
            android:text="@string/version"
            android:textSize="14.5sp"
            android:gravity="center_horizontal"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dialogPreferredContentPaddingHorizontal"
            android:paddingRight="@dimen/dialogPreferredContentPaddingHorizontal"
            android:text="@string/projectLink"
            android:textSize="14.5sp"
            android:textAlignment="center"
            android:autoLink="web"
            android:linksClickable="true"
            android:textIsSelectable="true"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dialogPreferredContentPaddingHorizontal"
            android:paddingRight="@dimen/dialogPreferredContentPaddingHorizontal"
            android:layout_marginTop="15dp"
            android:text="@string/copyright"
            android:textSize="14.5sp"
            android:textColor="@color/textColorPrimary"
            android:textAlignment="viewStart"
            android:gravity="start" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dialogPreferredButtonMarginHorizontal"
            android:paddingTop="@dimen/dialogPreferredButtonMarginVertical"
            android:paddingRight="@dimen/dialogPreferredButtonMarginHorizontal"
            android:paddingBottom="@dimen/dialogPreferredButtonMarginVertical">

            <TextView
                android:id="@+id/btn_ok_aboutAppDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/selector_dialog_button"
                android:text="@string/ok"
                android:textSize="@dimen/dialog_button_text_size"
                android:textColor="@color/okBtnTextColor" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>