<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel_renameVideoListItemDialog"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/color_selector_color_accent"
                android:gravity="center_vertical"
                android:includeFontPadding="false" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/rename"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/textColorPrimary"
                android:textAlignment="center"
                android:gravity="center"
                android:includeFontPadding="false" />

            <TextView
                android:id="@+id/btn_complete_renameVideoListItemDialog"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/complete"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/color_selector_color_accent"
                android:gravity="center_vertical"
                android:includeFontPadding="false" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_videoListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_default_thumb"
            android:contentDescription="@string/videoThumbnail" />

        <com.liuzhenlin.common.view.OnBackPressedPreImeEventInterceptableEditText
            android:id="@+id/editor_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:hint="新名称"
            android:textSize="@dimen/primary_text_size"
            android:singleLine="true"
            android:gravity="center_horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:ignore="Autofill,HardcodedText">

            <requestFocus />
        </com.liuzhenlin.common.view.OnBackPressedPreImeEventInterceptableEditText>
    </LinearLayout>
</ScrollView>